bloqueio por regra de negocio - aguardando definição

--- a/src/templates/emailWelcome.hbs
+++ b/src/templates/emailWelcome.hbs
@@ -24,7 +24,7 @@
         align-items: center;
         position: absolute;
       }
-      .button-login{
+      .button-conform{
         background-color: #ba8e73;
         border: none;
         border-radius: 6px;
@@ -49,10 +49,11 @@
       <div class="email-texto">
         <p>Olá, {{userName}}!</p>
         <p> Estamos emocionados em dar-lhe as boas-vindas à Marte 101, a sua porta de entrada para descobrir o misterioso Planeta Vermelho e seus segredos cósmicos!</p>
-        <p> Seu cadastro foi um sucesso e agora você está pronto para explorar Marte como nunca antes. Clique no link abaixo para acessar a plataforma:</p>
+        <p> Sua solicitação de cadastro foi recebida com sucesso e agora você está pronto para explorar Marte como nunca antes.</p>
+        <p> Clique no link abaixo para confirmar seu cadastro.</p>
         <div class="campo">
           <div class="div-button">
-            <a class="button-login" href="https://localhost:4200/users/login"target="_blank">Acessar Marte 101</a>
+            <a class="button-conform" href="https://localhost:4200/users/confim-email/{{token}}"target="_blank">Confirmar e-mail</a>
           </div> 
         </div>
         <p>Aqui estão algumas das incríveis funcionalidades que você encontrará em nossa plataforma:</p>
@@ -65,7 +66,7 @@
         <p>Nós estamos aqui para ajudar e garantir que você tenha uma experiência incrível em Marte 101. Se tiver alguma dúvida ou precisar de assistência, nossa equipe de suporte está à disposição para ajudar.</p>
         <p>Prepare-se para embarcar em uma jornada emocionante de descoberta espacial! O Planeta Vermelho está esperando por você.</p>
         <p>Seja bem-vindo e aproveite sua estadia!</p>
-        <p>Atenciosamente,<br/>Equipe Marte 101</p>`;
+        <p>Atenciosamente,<br/>Equipe Marte 101</p>
       </div>
     </div>
   </body>
